# multi-cam-imu-cal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
docs/: Coverage.md  Index.md  SoftwareArchitecture.md
include/: MathHelper.hpp  RosHelper.hpp  Transform.hpp  TypeHelper.hpp
include/test/: CMakeLists.txt  test_Eigen.cpp  test_MathHelper.cpp  test_RosHelper.cpp  test_Transform.cpp  test_TypeHelper.cpp
launch/: calibrate.launch  dataset.launch
nodes/: VizNode.cpp  VizNode.hpp  VizNodeMain.cpp  xCalibrateNode.cpp  xCalibrateNode.hpp  xCalibrateNodeMain.cpp
nodes/test/: CMakeLists.txt  test_VizNode.cpp  test_xCalibrateNode.cpp
params/: ace_074.yaml  blackfly.yaml  calibrate.yaml  target.yaml
resources/: camera.stl  imu.stl  lidar.stl  target.stl
scripts/: generateBoard.py  run_clang_format.bash  testQuaternion.py
sim/: .gitignore  README.md  run_sim.ipynb  run_sim.py  setup.py
sim/multi_imu/: cf.py  constants.py  ekf.py  imu.py  plot.py  sim.py  stats.py  truth.py
src/: CalibrationEKF.cpp  CalibrationEKF.hpp  DynamicSensor.cpp  DynamicSensor.hpp
src/test/: CMakeLists.txt  test_CalibrationEKF.cpp  test_DynamicSensor.cpp
test/: CMakeLists.txt  CodeCoverage.cmake  main.cpp
